# CppAppCore

./: .gitignore  CMakeLists.txt
Core/: CMakeLists.txt  pch.h
Core/Core/Event/: EventDispatcher.h
ExampleApp/: CMakeLists.txt
UnitTest/: CMakeLists.txt  EventDispatcherTest.cpp
